# fastpool

./: .gitmodules  CMakeLists.txt  README.md  meson.build
example/: CMakeLists.txt  meson.build  pool.cpp
include/: FastPool.h  OneWayPool.h  meson.build
